--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h2>GAMES</h2>
             <ul class="game-list">
                 <li><a href="fnfgame/index.html">FRIDAY NIGHT FUNKIN</a></li>
+                <li><a href="minecraftm/index.html">MINECRAFT EAGTEK</a></li>
             </ul>
         </section>
 
