--- a/index.html
+++ b/index.html
@@ -28,7 +28,69 @@
         </section>
 
         <footer class="footer">
-            
+              <ul>
+        <li>
+            <h2>SERVERS FOR MINECRAFT</h2>
+            <strong>#1 Voidsent MC</strong> - Online: 105<br>
+            Description: The #1 Eaglercraft Server! We have Practice PvP, Factions, Survival, MMORPG, Duels & CPvP gamemodes. Cross platform and cracked friendly. Play unblocked Minecraft 1.8.8 or 1.12!<br>
+            Gamemodes: PvP, Economy, Minigames, Survival<br>
+            IP: <a href="wss://mc.voidsent.net">mc.voidsent.net</a>
+        </li>
+        <li>
+            <strong>#2 CommunistMC</strong> - Online: 23<br>
+            Description: Have fun with many Comrades! Active Community, Clans, 150+ custom enchants, PVP arenas, Minievents and much more!<br>
+            Gamemodes: PvP, Economy, Minigames, Survival<br>
+            IP: <a href="wss://cmc.tf">cmc.tf</a>
+        </li>
+        <li>
+            <strong>#3 ElysiumNetwork</strong> - Online: 44<br>
+            Description: Modern PvP focused Eaglercraft server! Practice modes, Survival RandomKits, FFA & bot training. Play unblocked Minecraft PvP on 1.20 and 1.12.<br>
+            Gamemodes: PvP, Economy, Minigames, Survival, Creative<br>
+            IP: <a href="wss://web.elysium.lat">web.elysium.lat</a>
+        </li>
+        <li>
+            <strong>#4 SkeletonMC</strong> - Online: 22<br>
+            Description: Survival Server with Custom Enchants, Player-Ran Economy, Clans, Events, and more. Official Eaglerforum Server!<br>
+            Gamemodes: PvP, Economy, Survival<br>
+            IP: <a href="wss://skeletonmc.eagler.host">skeletonmc.eagler.host</a>
+        </li>
+        <li>
+            <strong>#5 WanderwoodSMP</strong> - Online: 34<br>
+            Description: Season 3 - Lifesteal, KitPvP, Bedwars & Vanilla! Java/Bedrock/Eagler crossplay 1.8/1.12.<br>
+            Gamemodes: PvP, Economy, Minigames, Survival<br>
+            IP: <a href="wss://wanderwood.thatonebot.site">wanderwood.thatonebot.site</a>
+        </li>
+        <li>
+            <strong>#6 GG SMP</strong> - Online: 50<br>
+            Description: MMORPG server with custom items, bosses & economy! Play free on unblocked Minecraft with Eaglercraft download support for 1.8/1.12.<br>
+            Gamemodes: Economy, Survival<br>
+            IP: <a href="wss://ggsmp.net">ggsmp.net</a>
+        </li>
+        <li>
+            <strong>#7 Dumbshit Survival X</strong> - Online: 10<br>
+            Description: Vanilla+ survival 1.12.2 server with NO economy, NO ranks, NO crates, just fun. Crossplay over Java, Eagler, and Bedrock.<br>
+            Gamemodes: Survival<br>
+            IP: <a href="wss://mc.dssx.uk">mc.dssx.uk</a>
+        </li>
+        <li>
+            <strong>#8 AdderallMC</strong> - Online: 153<br>
+            Description: Top-voted server! Lifesteal, Practice PvP, Survival, OneBlock & Creative modes. Play unblocked Minecraft 1.8 or 1.12.<br>
+            Gamemodes: PvP, Economy, Minigames, Survival, Creative<br>
+            IP: <a href="wss://adderall.ir">adderall.ir</a>
+        </li>
+        <li>
+            <strong>#9 HollandSMP</strong> - Online: 6<br>
+            Description: Ultimate Survival SMP for Eaglercraft players. Grind, trade, build, and become rich in true survival.<br>
+            Gamemodes: PvP, Economy, Survival<br>
+            IP: <a href="wss://hollandsmp.eagler.host">hollandsmp.eagler.host</a>
+        </li>
+        <li>
+            <strong>#10 Fyre Network</strong> - Online: 2<br>
+            Description: Community-focused minigame server.<br>
+            Gamemodes: PvP, Economy, Minigames, Survival<br>
+            IP: <a href="wss://eagler.imcalledfyre.com">eagler.imcalledfyre.com</a>
+        </li>
+    </ul>
         </footer>
     </div>
 </body>
